[package]
name = "scratch_compiler"
version = "0.1.0"
authors = ["Johan-Mi <johanmilanov@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.116", features = ["derive"] }
serde_json = "1.0.58"
zip = "0.5.8"
md5 = "0.7.0"
rand = "0.7.3"
derive_opcode = { path = "macros/derive_opcode" }
derive_serialize_next = { path = "macros/derive_serialize_next" }
